testsuite/tests/deriving/should_fail/T10598_fail3.stderr

T10598_fail3.hs:1:1: error:
    Generic instances can only be derived in Safe Haskell using the bespoke strategy.
    In the following instance:
      instance [safe] Generic T
